<resources>
  <string name="app_name">Hillfort</string>
  <string name="hint_hillfortTitle">Hillfort Title</string>
  <string name="hint_hillfortDescription">Description </string>
  <string name="button_addHillfort">Add Hillfort</string>
  <string name="menu_addHillfort">Add</string>
  <string name="menu_cancel">Cancel</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_logout">Logout</string>
  <string name="menu_itemDel">Delete</string>
  <string name="enter_hillfort_title">Please enter a Hillfort Title </string>
  <string name="save">Save</string>
  <string name="delete">DELETE</string>

  <string name="button_addImage"> Add Image </string>
  <string name="select_hillfort_image">Select Hillfort image</string>
  <string name="change_hillfort_image">Change Hillfort image</string>
  <string name="button_location">Set Location</string>
  <string name="title_activity_maps">Map</string>
  <string name="total_visited">Visisted: %1$s / %2$s</string>
  <string name="checkbox">Visisted %1$s</string>

  <string name="rating">Rating: %1$s</string>
  <string name="fav">Favourites</string>

</resources>
